@@ -1,5 +1,12 @@
 2006-12-23  Inge Wallin  <inge@lysator.liu.se>
 
+	Fourth step, part 5a of wish 117960
+	Put the config dialog in dialogs/
+	* Move:
+	kchartParameter3dConfigPage  -->  dialogs/KCConfigSubtypeBarPage
+	
+	----------------------------------------------------------------
+
 	Fourth step, part 4 of wish 117960
 	Put the config dialog in dialogs/
 	* Move:
